// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextEditor /> snapshot test @content is not null, @height is not null 1`] = `
<div>
  <SimpleMDEEditor
    content="content"
    events={Object {}}
    handleEditorChange={[MockFunction]}
    height={400}
    input={Object {}}
    onBlur={null}
    onChange={[Function]}
    options={
      Object {
        "toolbar": Array [
          "bold",
          "italic",
          "heading",
          "|",
          "quote",
          "code",
          "unordered-list",
          "ordered-list",
          "clean-block",
          "link",
          "image",
          "horizontal-rule",
          "preview",
          "undo",
          "redo",
          "guide",
        ],
      }
    }
  />
</div>
`;

exports[`<TextEditor /> snapshot test @content is null, @height is null 1`] = `
<div>
  <SimpleMDEEditor
    content={null}
    events={Object {}}
    handleEditorChange={[MockFunction]}
    height={null}
    input={Object {}}
    onBlur={null}
    onChange={[Function]}
    options={
      Object {
        "toolbar": Array [
          "bold",
          "italic",
          "heading",
          "|",
          "quote",
          "code",
          "unordered-list",
          "ordered-list",
          "clean-block",
          "link",
          "image",
          "horizontal-rule",
          "preview",
          "undo",
          "redo",
          "guide",
        ],
      }
    }
  />
</div>
`;
